tests/ui/fn/coerce-suggestion-infer-region.stderr
error[E0308]: mismatched types
  --> $DIR/coerce-suggestion-infer-region.rs:22:17
   |
LL |     Desugared { callback }
   |                 ^^^^^^^^ expected `Box<dyn MyFn<&Container<&u8>>>`, found `Box<dyn MyFn<Container<&u8>>>`
   |
   = note: expected struct `Box<(dyn for<'a> MyFn<&'a Container<&'a u8>> + 'static)>`
              found struct `Box<(dyn for<'a> MyFn<Container<&'a u8>> + 'static)>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
